k8s/database/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: jerney-ns
  labels:
    app: jerney-database
  annotations:
    description: "Headless Service for Postgres StatefulSet"
spec:
  clusterIP: None 
  ports:
    - port: 5432   
      targetPort: 5432
      protocol: TCP
      name: postgres-port
  selector:
    app: database-pods
