k8s/database/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-network-policy
  namespace: jerney-ns
spec:

  podSelector:
    matchLabels:
      app: database-pods
  
  policyTypes:
    - Ingress
    - Egress

  # Allow incoming traffic ONLY from the backend pods
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend-pod
      ports:
        - protocol: TCP
          port: 5432

  # Restrict outgoing traffic (Egress)
  # Usually databases don't need to initiate connections, but you might need DNS
  egress:
    - to:
        - namespaceSelector: {} # Allow DNS resolutions if needed
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
